# Sha1-Cracker

./: Cargo.toml  README.md  wordlist.txt
src/: config.rs  hash.rs  lib.rs  main.rs
