[package]
name = "cryptea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
digest = "0.10.7"
hex = "0.4.3"
md5 = "0.7.0"
sha1 = "0.10.5"

clap = { version = "4.3.3", features = ["derive"] }
anyhow = "1.0"
